--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck": "tsc -p .",
     "postinstall": "husky install"
   },
-  "repo":"https://github.com/jy0529/ts-eslint--plugin-template.git" ,
+  "repo": "https://github.com/jy0529/ts-eslint--plugin-template.git",
   "repository": {
     "url": "git@github.com:jy0529/ts-eslint--plugin-template.git"
   },
@@ -64,8 +64,12 @@
     "@typescript-eslint/parser": "^5.30.0",
     "babel-jest": "^28.1.1",
     "eslint": "^8.18.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-eslint-plugin": "^4.3.0",
+    "eslint-plugin-node": "^11.1.0",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "semver": "^7.3.7",
     "ts-node": "^10.8.1",
